--- a/starter_project/src/client/styles/base.scss
+++ b/starter_project/src/client/styles/base.scss
@@ -1,14 +1,16 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
 }
 
-main {
-    flex: 2;
+a {
+    color: #333;
+    text-decoration: none;
 }
 
-section {
-    max-width: 800px;
-    margin: 50px auto;
+a:hover {
+    text-decoration: underline;
 }
