--- a/starter_project/src/client/styles/header.scss
+++ b/starter_project/src/client/styles/header.scss
@@ -1,5 +1,11 @@
 header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
-    padding: 10px 40px;
+}
+
+header div {
+    margin: 0 10px;
 }
